force-app/main/default/objects/FMG_MF_Conversion__mdt/FMG_MF_Conversion__mdt.object-meta.xml
<CustomObject>
    <label>FMG MF Conversion</label>
    <pluralLabel>FMG MF Conversions</pluralLabel>
</CustomObject>