force-app/main/default/objects/FMG_MF_Conversion__mdt/fields/Inventory_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Location_ID__c</fullName>
    <label>Inventory Location ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>