force-app/main/default/objects/FMG_MF_Conversion__mdt/fields/Temp_Location_Number__c.field-meta.xml
<CustomField>
    <fullName>Temp_Location_Number__c</fullName>
    <label>Temp Location Number</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>