force-app/main/default/objects/FMG_MF_Conversion__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Inventory_Location_ID__c</columns>
    <columns>Inventory_Location_Number__c</columns>
    <columns>Temp_Location_Id__c</columns>
    <columns>Temp_Location_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>